# soma

./: .gitignore  .mcp.json  .prettierignore  CHANGELOG.md  LICENSE  README.md  drizzle.config.ts  eslint.config.js  index.html  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml  package-smoke.yml  release.yml
docs/: PRD-ai-chat-health-agent.md  PRD-health-record-expansion.md  app-review-2026-07.md  health-data-integrations.md  platform-support.md  releasing.md
mcp/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
mcp/src/: db.ts  guard.test.ts  guard.ts  index.ts  mapping.ts  schema-extra.ts
scripts/: build-linux.sh  build-macos.sh  build-sidecar.mjs  build-windows.ps1  check-biomarker-info.ts  check-import.ts  gen-icons.mjs  prepare-release.mjs  reset-db.ts  seed-demo-data.py  seed-fake-data.ts  setup-linux.sh  setup-macos.sh  setup-windows.ps1  version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  backup.rs  fsutil.rs  kdf.rs  lib.rs  mcp.rs  transaction.rs  vault.rs
src/ai/: context.ts  index.ts  keystore.ts  model-registry.json  prompts.test.ts  prompts.ts  types.ts
src/app/: AppContext.tsx  Shell.tsx  nav.ts
src/content/: biomarker-info.en.ts  biomarker-info.ru.ts  biomarker-info.ts
src/db/: chat-repos.ts  client.ts  guards.test.ts  guards.ts  migrate.test.ts  migrate.ts  repos.ts  schema.ts  search.ts  seed-biomarkers.ts  (+1 more)
(+216 files in other folders)
