[package]
name = "soma"
version = "0.1.0"
description = "Soma — privacy-first personal health dashboard"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "soma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml_edit = "0.22"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
aes-gcm = "0.11"
argon2 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
